<resources>
    <string name="app_name">Camera</string>
    <string name="action_settings">Settings</string>
    <string name="take_picture">Take Picture</string>
    <string name="upload">Upload</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
</resources>
